<resources>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">XKatrina 763</string>
    <string name="onb_welcome_title">Selamat datang di XKatrina</string>
    <string name="onb_welcome_subtitle">Toolkit untuk root: build.prop editor, ritual, fake GPS, shortcut, dan lainnya.</string>
    <string name="onb_choose_language">Pilih bahasa</string>
    <string name="onb_continue">Lanjutkan</string>
    <string name="onb_module_warning">Beberapa fitur memerlukan module XKatrina (Magisk / KSU / APatch).</string>
    <string name="onb_root_required">Akses root diperlukan untuk fitur tertentu.</string>
    <string name="agree_keyword">setuju</string>
    <string name="agree_prompt">Ketik \"%1$s\" jika kamu menyetujui,</string>
    <string name="agree_hint">Tidak setuju</string>
    <string name="agree_button">Setuju</string>
    <string name="agree_rejected">Anda belum diperbolehkan menggunakan aplikasi ini</string>
    <string name="permission_island_short">I\'m Katrina</string>
    <string name="permission_island_intro">I am Katrina Island &lt;/&gt;</string>
    <string name="permission_island_tip_menu">Kamu bisa akses menu penting dari sini</string>
    <string name="permission_island_tip_script">Semua script sh juga bisa dijalankan dari sini</string>
    <string name="permission_island_tip_ritual">Ritual juga ada di sini :)</string>
    <string name="permission_island_tip_address">Generator alamat juga ada</string>
    <string name="permission_desc_notifications">Ijinkan Katrina Island membuat notifikasi di perangkat</string>
    <string name="permission_desc_overlay">Ijinkan Katrina Island mengambang di atas aplikasi lain</string>
    <string name="permission_desc_accessibility">Aktifkan Katrina Island pada menu Aksesibilitas</string>
    <string name="permission_button_grant">Berikan Izin</string>
    <string name="permission_button_allowed">Diizinkan</string>
    <string name="permission_channel_name">Notification Channel</string>
    <string name="permission_channel_desc">Channel untuk menampilkan notifikasi</string>
    <string name="module_not_installed_title">Module belum terpasang</string>
    <string name="module_not_installed_msg">Fitur \"%1$s\" memerlukan module XKatrina aktif di Magisk/KSU/APatch. Pasang sekarang?</string>
    <string name="module_install">Install</string>
    <string name="module_cancel">Batal</string>
    <string name="module_reboot_title">Reboot diperlukan</string>
    <string name="module_reboot_msg">Module berhasil dipasang. Reboot sekarang?</string>
    <string name="module_reboot_yes">Reboot</string>
    <string name="module_reboot_later">Nanti</string>
    <string name="module_extract_failed">Gagal extract module dari assets</string>
    <string name="module_install_success">Module terpasang. Silakan reboot.</string>
    <string name="module_install_no_manager">Magisk/KSU/APatch tidak ditemukan</string>
    <string name="module_install_failed">Gagal install: %1$s</string>
    <string name="module_inactive_title">Module tidak aktif</string>
    <string name="module_disabled_title">Module Disable</string>
    <string name="module_disabled_msg">Aktifkan module XKatrina pada magisk module</string>
    <string name="module_install_prompt">Tekan tombol di bawah untuk memasang module XKatrina secara otomatis. Matikan module pengubah merek lain agar tidak bentrok.</string>
    <string name="module_install_button">Install Module</string>
    <string name="module_installing">Memasang…</string>
    <string name="module_install_done">Berhasil - Reboot</string>
    <string name="feature_cleaning">Cleaning / Timepick</string>
    <string name="feature_buildprop">Build.prop Editor</string>
    <string name="feature_xkatrina">XKatrina</string>
    <string name="cleaning_title_running">Cleaning\nProses…</string>
    <string name="cleaning_subtitle_mapping">Memetakan file dan cache</string>
    <string name="cleaning_title_done">Selesai</string>
    <string name="cleaning_subtitle_done">Berhasil membersihkan /data/*/* &amp;&amp; /storage/*/*</string>
    <string name="fakegps_title">Fake GPS</string>
    <string name="fakegps_desc">Tap di peta untuk pindah lokasi. Aktifkan \'Select mock location app\' di Developer Options.</string>
    <string name="fakegps_lat">Lat</string>
    <string name="fakegps_lon">Lon</string>
    <string name="fakegps_preset">Preset</string>
    <string name="fakegps_dev_options">Dev Options</string>
    <string name="fakegps_start">Start Fake GPS</string>
    <string name="fakegps_stop">Stop Fake GPS</string>
    <string name="fakegps_running_notif_title">Fake GPS aktif</string>
    <string name="fakegps_notif_stop">Stop</string>
    <string name="fakegps_pick_title">Pilih Lokasi</string>
    <string name="fakegps_invalid_coord">Latitude / Longitude tidak valid</string>
    <string name="fakegps_mock_disabled_title">Mock location belum aktif</string>
    <string name="fakegps_mock_disabled_msg">Buka Developer Options -&gt; \'Select mock location app\' lalu pilih XKatrina.</string>
    <string name="fakegps_open">Buka</string>
    <string name="fakegps_dev_unavailable">Tidak dapat membuka Developer Options</string>
    <string name="common_ok">Oke</string>
    <string name="common_open">Buka</string>
    <string name="common_close">Tutup</string>
    <string name="common_loading">Loading</string>
    <string name="common_retry">Ulangi</string>
    <string name="toast_hard_random_success">Berhasil diacak (Hard Random)</string>
    <string name="toast_prop_random_success">Berhasil diacak (Prop Random)</string>
    <string name="toast_error_generic">Terjadi kesalahan</string>
    <string name="toast_select_folder_first">Harap pilih folder</string>
    <string name="toast_app_not_found">Aplikasi tidak ditemukan</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_force_stop_it">Force-Stop It!</string>
    <string name="button_go_settings">Go Setting</string>
    <string name="button_refresh_list">Refresh List</string>
    <string name="button_show_running_applications">Show Running Applications</string>
    <string name="button_show_running_apps">Show Running Apps</string>
    <string name="button_stop_all_apps">Stop All Apps</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_no_text_found">No text found or the app blocked Copy from accessing the screen.</string>
    <string name="error_private_app">This app blocked Copy from accessing the text and screenshot.</string>
    <string name="error_screenshot_failed">Sharing the screenshot failed.</string>
    <string name="error_text_access_disabled">Text access is disabled in the assist settings.</string>
    <string name="error_webview">Copy is unable to access this part of the screen.</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://xkatrina-fufufu-default-rtdb.firebaseio.com</string>
    <string name="google_api_key">AIzaSyAjz8fUM_Acg9coUxpThCuXpxNgMla4nCY</string>
    <string name="google_app_id">1:578245639073:android:a6dee779b326eae6cba9e0</string>
    <string name="google_storage_bucket">xkatrina-fufufu.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="progressbar_inprogress">In progress...</string>
    <string name="progressbar_pleasewait">Please wait</string>
    <string name="project_id">xkatrina-fufufu</string>
    <string name="search_menu_title">Search</string>
    <string name="searchbar_scrolling_view_behavior">com.google.android.material.search.SearchBar$ScrollingViewBehavior</string>
    <string name="searchview_clear_text_content_description">Clear text</string>
    <string name="searchview_navigation_content_description">Back</string>
    <string name="share_copied">\"%1$s\" copied.</string>
    <string name="share_screenshot">Share Screenshot</string>
    <string name="share_screenshot_progress">Sharing screenshot…</string>
    <string name="share_title">Share \"%1$s\"</string>
    <string name="side_sheet_accessibility_pane_title">Side Sheet</string>
    <string name="side_sheet_behavior">com.google.android.material.sidesheet.SideSheetBehavior</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tab_system_apps">SYSTEM APPLICATIONS</string>
    <string name="tab_user_apps">USER APPLICATIONS</string>
    <string name="termfu_application_name">XTermod</string>
    <string name="termfu_autofill_password">Autofill password</string>
    <string name="termfu_bad_token_message">This shortcut has become invalid - remove and add again.</string>
    <string name="termfu_bootstrap_error_abort">Abort</string>
    <string name="termfu_bootstrap_error_body">XTermod was unable to install the bootstrap packages.</string>
    <string name="termfu_bootstrap_error_not_primary_user_message">XTermod can only be installed on the primary user account.</string>
    <string name="termfu_no_shortcut_scripts">No files in\n$HOME/.shortcuts/</string>
    <string name="termfu_refresh">Refresh</string>
    <string name="termfu_termux">XTermod</string>
    <string name="title_build_prop_editor">Build Prop Editor</string>
    <string name="btn_acak">ACAK</string>
    <string name="btn_acak_prop">ACAK PROP</string>
    <string name="btn_exit">EXIT</string>
    <string name="btn_reboot">REBOOT</string>
</resources>