<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:padding="0dp"
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/top_row"
            android:background="#ff000000"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:textColor="@android:color/primary_text_dark"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/termfu_termux"
                android:layout_weight="2"/>
        </LinearLayout>
        <ListView
            android:id="@+id/widget_list"
            android:background="@android:color/background_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1px"
            android:layout_below="@+id/top_row"/>
        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/empty_view"
            android:background="@android:color/white"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/termfu_no_shortcut_scripts"
            android:layout_below="@+id/top_row"/>
    </RelativeLayout>
    <ImageButton
        android:id="@+id/refresh_button"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/ic_reinstall"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/termfu_refresh"
        android:layout_alignParentEnd="true"
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>
