<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/ln_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ScrollView
            android:id="@+id/vscr_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/ln_title_top"
                android:padding="@dimen/fu8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/fu13sp"
                    android:textStyle="bold"
                    android:id="@+id/tv_title"
                    android:paddingTop="@dimen/fu8dp"
                    android:paddingRight="@dimen/fu8dp"
                    android:paddingBottom="@dimen/fu2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_build_prop_editor"/>
                <TextView
                    android:textSize="@dimen/fu9sp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/tv_prop_title"
                    android:paddingTop="@dimen/fu2dp"
                    android:paddingRight="@dimen/fu8dp"
                    android:paddingBottom="@dimen/fu8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_build_prop_editor"/>
                <ProgressBar
                    android:id="@+id/pbar_title"
                    android:paddingTop="@dimen/fu8dp"
                    android:paddingBottom="@dimen/fu8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    style="?android:attr/progressBarStyleHorizontal"/>
            </LinearLayout>
        </ScrollView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_1"
            android:padding="@dimen/fu4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ListView
            android:id="@+id/lv_1"
            android:padding="@dimen/fu4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:choiceMode="none"
            android:layout_weight="1"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ln_bottom"
            android:paddingLeft="@dimen/fu8dp"
            android:paddingRight="@dimen/fu8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textSize="@dimen/fu10sp"
                android:id="@+id/btn_hard_random"
                android:padding="@dimen/fu8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fu2dp"
                android:text="@string/btn_acak"
                android:layout_weight="1"
                app:icon="@drawable/ic_card_fav_on"
                app:iconGravity="textStart"/>
            <Button
                android:textSize="@dimen/fu10sp"
                android:id="@+id/btn_random"
                android:padding="@dimen/fu8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fu2dp"
                android:text="@string/btn_acak_prop"
                android:layout_weight="1"
                app:icon="@drawable/ic_card_fav_on"
                app:iconGravity="textStart"/>
            <Button
                android:textSize="@dimen/fu10sp"
                android:id="@+id/btn_apply"
                android:padding="@dimen/fu8dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fu2dp"
                app:icon="@drawable/ic_fab_backup"
                app:iconGravity="textStart"
                app:iconSize="@dimen/fu18dp"
                style="?attr/materialIconButtonFilledTonalStyle"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ln_reboot"
        android:paddingLeft="@dimen/fu8dp"
        android:paddingRight="@dimen/fu8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textSize="@dimen/fu10sp"
            android:id="@+id/btn_exit"
            android:padding="@dimen/fu8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fu2dp"
            android:text="@string/btn_exit"
            android:layout_weight="1"/>
        <Button
            android:textSize="@dimen/fu10sp"
            android:id="@+id/btn_reboot"
            android:padding="@dimen/fu8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fu2dp"
            android:text="@string/btn_reboot"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
