<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ln_base_island"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ln_image_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fu40dp"
            android:layout_marginTop="@dimen/fu100dp"
            android:layout_marginRight="@dimen/fu40dp"
            android:layout_marginBottom="@dimen/fu100dp"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/ln_image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="top|center_horizontal"
                    android:layout_gravity="top|center_horizontal"
                    android:orientation="horizontal"
                    android:id="@+id/ln_image2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/fu3dp"
                    android:layout_marginTop="@dimen/fu3dp"
                    android:layout_marginRight="@dimen/fu3dp">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_gravity="top|center_horizontal"
                        android:orientation="horizontal"
                        android:id="@+id/ln_island_img"
                        android:padding="@dimen/fu8dp"
                        android:layout_width="@dimen/fu30dp"
                        android:layout_height="@dimen/fu30dp"
                        android:layout_marginTop="@dimen/fu8dp">
                        <TextView
                            android:textSize="@dimen/fu9sp"
                            android:textColor="#ffffff"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/tv_katrina"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/permission_island_short"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/ln_permission_notif"
            android:padding="@dimen/fu8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/fu12sp"
                android:gravity="center"
                android:id="@+id/tv_03"
                android:padding="@dimen/fu8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_desc_notifications"
                android:layout_weight="1"/>
            <Button
                android:textSize="@dimen/fu12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/btn_notif"
                android:padding="@dimen/fu8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_button_grant"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/ln_permission_overlay"
            android:padding="@dimen/fu8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/fu12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_01"
                android:padding="@dimen/fu8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_desc_overlay"
                android:layout_weight="1"/>
            <Button
                android:textSize="@dimen/fu12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/btn_overlay"
                android:padding="@dimen/fu8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_button_grant"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:id="@+id/ln_permission_access"
            android:padding="@dimen/fu8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/fu12sp"
                android:gravity="center"
                android:id="@+id/tv_02"
                android:padding="@dimen/fu8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_desc_accessibility"
                android:layout_weight="1"/>
            <Button
                android:textSize="@dimen/fu12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/btn_access"
                android:padding="@dimen/fu8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_button_grant"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
